--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -95,6 +95,7 @@ a {
 #equipo {
   padding-top: 100px; }
   #equipo h2 {
+    max-width: 350px;
     font-size: 50px;
     font-weight: 700;
     font-family: "Source Sans Pro";
@@ -104,23 +105,31 @@ a {
     padding: 2px 10px 8px 10px;
     margin-bottom: -40px; }
   #equipo figure {
-    margin-top: 80px;
+    margin-top: 50px;
     display: inline-block;
     text-align: center; }
+  #equipo .container1 {
+    max-width: 360px;
+    display: block;
+    margin: auto; }
   #equipo h3 {
     font-family: "Permanent Marker";
     font-size: 30px;
-    color: #000; }
+    color: #000;
+    text-align: left; }
   #equipo h4 {
     font-family: "Source Sans Pro";
     font-size: 30px;
     color: #ce8f2f;
     text-transform: uppercase;
     font-: 20px;
-    line-height: 10px; }
+    line-height: 10px;
+    text-align: justify; }
   #equipo p {
     padding-top: 20px;
-    font-size: 14px; }
+    font-size: 16px;
+    color: #000;
+    text-align: left; }
 
 /****************************************/
 /*=========     PORTFOLIO     =========*/
