--- a/html/scss/_layout.scss
+++ b/html/scss/_layout.scss
@@ -87,15 +87,16 @@
 #equipo{
 	padding-top: 100px;
 	h2{
-		max-width: 350px;
+		margin: auto;
+		max-width: 360px;
 		font-size: 50px;
 		font-weight: 700;
 		font-family: $fuente-1;
 		color: $color-3;
-		display: inline-block;
+		display: block;
 		background-color: $color-1;
-		padding: 2px 10px 8px 10px;
-		margin-bottom: -40px;
+		padding: 2px 0px 8px 0px;
+		margin-bottom: -20px;
 	}
 
 	figure{
