--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -95,15 +95,16 @@ a {
 #equipo {
   padding-top: 100px; }
   #equipo h2 {
-    max-width: 350px;
+    margin: auto;
+    max-width: 360px;
     font-size: 50px;
     font-weight: 700;
     font-family: "Source Sans Pro";
     color: #f5f5f5;
-    display: inline-block;
+    display: block;
     background-color: #000;
-    padding: 2px 10px 8px 10px;
-    margin-bottom: -40px; }
+    padding: 2px 0px 8px 0px;
+    margin-bottom: -20px; }
   #equipo figure {
     margin-top: 50px;
     display: inline-block;
@@ -143,5 +144,14 @@ a {
 /******************************************/
 /*=========     MEDIA-QUERIES    =========*/
 /******************************************/
+@media (min-width: 768px) {
+  h2 {
+    width: 220px; } }
+@media (min-width: 992px) {
+  h2 {
+    width: 293px; } }
+@media (min-width: 1200px) {
+  h2 {
+    width: 360px; } }
 
 /*# sourceMappingURL=styles.css.map */
