--- a/html/scss/_layout.scss
+++ b/html/scss/_layout.scss
@@ -68,7 +68,6 @@
 		font-weight: 700;
 		font-family: $fuente-1;
 		color: $color-3;
-		text-shadow: 0 1px 2px #000;
 
 	}
 	p{
@@ -76,7 +75,6 @@
 		font-size: 60px;
 		font-family: $fuente-2;
 		color: $color-2;
-		text-shadow: 0 1px 2px #000;
 	}
 }
 
@@ -86,6 +84,7 @@
 
 #equipo{
 	padding-top: 100px;
+
 	h2{
 		margin: auto;
 		max-width: 360px;
@@ -105,12 +104,13 @@
 		text-align: center;
 	}
 
-.container1{
-	max-width: 360px;
-	display: block;
-	margin: auto;
-}
+	.container1{
+		max-width: 360px;
+		display: block;
+		margin: auto;
+	}
 	h3{
+
 		font-family: $fuente-2;
 		font-size: 30px;
 		color: $color-1;
@@ -131,26 +131,243 @@
 		color: $color-1;
 		text-align: left;
 	}
-}
 
+}
+/***************************************/
+/*=========      SERVICIOS      ======*/
+/*************************************/
+
+
+#que-hacemos{
+	padding-top: 100px;
+
+	.glyphicon {
+		color: white;
+		font-size: 30px !important;
+	}
+	img {
+    height: 300px;
+    width: auto;
+    max-width: 200%;
+	}
+
+	.carousel-caption{
+		padding: 0;
+		left: 10%;
+		text-shadow: none;
+		height: 75%;
+
+		.container{
+			margin: auto !important;
+			text-align: left !important;
+		}
+		h3{
+			max-width: 350px;
+			font-size: 20px;
+			font-weight: 700;
+			font-family: $fuente-1;
+			color: $color-1;
+			display: inline-block;
+			background-color: white;
+			padding: 2px 10px 6px 10px;
+			margin-bottom: -10px;
+		}
+		h2{
+			max-width: 350px;
+			font-size: 40px;
+			font-weight: 700;
+			font-family: $fuente-1;
+			color: white;
+			line-height:30px;
+			margin-bottom: -5px;
+		}
+		button{
+			max-width: 350px;
+			font-size: 15px;
+			font-weight: 700;
+			color: white;
+			display: inline-block;
+			background-color: $color-2;
+			font-family: $fuente-1;
+			padding: 4px 20px 4px 20px;
+			margin-top: 20px;
+			border: none;
+		}
+	}
+}
 
 /****************************************/
 /*=========     PORTFOLIO     =========*/
 /**************************************/
 
+#portfolio{
+	padding-top:100px;
+	h2{
+		margin: auto;
+		max-width: 360px;
+		font-size: 50px;
+		font-weight: 700;
+		font-family: $fuente-1;
+		color: $color-3;
+		display: block;
+		background-color: $color-1;
+		padding: 2px 0px 8px 0px;
+		margin-bottom: 20px;
+	}
+	figure{
+		margin-top: 25px;
+		display: inline-block;
+		text-align: center;
+
+	}
+}
+
+/****************************************/
+/*=========    CELEBRITIES    =========*/
+/**************************************/
+
+#celebrities{
+	padding-top: 90px;
+
+	h2{
+		margin: auto;
+		max-width: 360px;
+		font-size: 50px;
+		font-weight: 700;
+		font-family: $fuente-1;
+		color: $color-3;
+		display: block;
+		background-color: $color-1;
+		padding: 2px 0px 8px 0px;
+		margin-bottom: 30px;
+	}
+	img {
+    height: 300px;
+    width: auto;
+    max-width: 200%;
+	}
+
+	.glyphicon {
+		color: white;
+		font-size: 30px !important;
+	}
 
 
-
-
-
+}
 
 
 /**************************************/
 /*=========     CONTACT     =========*/
 /************************************/
+#contacto {
+  padding-top: 90px;
+}
+
+.container-contacto {
+
+	background-color: $color-1;
+	}
+
+.mapa{
+	line-height: 0 !important;
+	border: none;
+	padding: 0 !important;
+}
+
+#contacto{
+
+	h2 {
+		max-width: 350px;
+		font-size: 50px;
+		font-weight: 700;
+		font-family: $fuente-1;
+		color: #f5f5f5;
+		display: inline-block;
+		background-color: #000;
+		padding: 2px 10px 8px 10px;
+		margin-bottom: 40px;
+	}
+	h3 {
+		padding-left: 55px;
+		padding-top: 50px;
+		max-width: 90%;
+		margin: 0;
+		font-size: 21px;
+		font-weight: 700;
+		font-family: $fuente-1;
+		color: $color-3;
+		line-height: 25px;
+		margin-bottom: -5px;
+	}
+
+}
+.form{
+	padding-left: 55px;
+	margin-top: 30px;
+	max-width: 90%;
+	font-family: $fuente-1;
+}
+.form-control{
+	height: 42px;
+	border: none !important;
+	border-radius: 0;
+	font-size: 17px;
+}
+.btn {
+	width: 180px;
+	border-radius: 0;
+	border: none !important;
+	font-size: 25px;
+	font-weight: 700;
+	color: $color-3;
+	background-color: $color-2;
+	font-family: $fuente-1;
+	margin-top: 5px;
+}
+.form-group{
+	margin-bottom: 9px;
+}
+.contacto-form p {
+	padding-left: 55px;
+  	padding-top: 12px;
+  	font-size: 16px;
+  	color: $color-3;
+  	text-align: left; }
 
 
-
+.direccion{
+	margin: 25px 0 35px;
+	p{
+		margin: 0;
+	}
+	i{
+		padding-right: 10px;
+		font-size: 25px;
+	}
+}
 /************************************/
 /*=========     FOOTER     =========*/
 /************************************/
+
+#footer{
+	background-color: $color-3;
+	height: 310px;
+	text-align: center;
+
+	img{
+		display: block;
+		margin: auto;
+		padding-top: 15px;
+	}
+	i{
+		width: 40px;
+		height: 40px;
+		font-size: 28px;
+		background-color: $color-1;
+		color: $color-3;
+		border-radius: 50% !important;
+		margin: 15px 5px;
+		display: inline-block;
+
+	}
+}
