--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -80,14 +80,12 @@ a {
     font-size: 80px;
     font-weight: 700;
     font-family: "Source Sans Pro";
-    color: #f5f5f5;
-    text-shadow: 0 1px 2px #000; }
+    color: #f5f5f5; }
   #banner p {
     text-align: center;
     font-size: 60px;
     font-family: "Permanent Marker";
-    color: #ce8f2f;
-    text-shadow: 0 1px 2px #000; }
+    color: #ce8f2f; }
 
 /***************************************/
 /*=========      EQUIPO      =========*/
@@ -132,15 +130,199 @@ a {
     color: #000;
     text-align: left; }
 
+/***************************************/
+/*=========      SERVICIOS      ======*/
+/*************************************/
+#que-hacemos {
+  padding-top: 100px; }
+  #que-hacemos .glyphicon {
+    color: white;
+    font-size: 30px !important; }
+  #que-hacemos img {
+    height: 300px;
+    width: auto;
+    max-width: 200%; }
+  #que-hacemos .carousel-caption {
+    padding: 0;
+    left: 10%;
+    text-shadow: none;
+    height: 75%; }
+    #que-hacemos .carousel-caption .container {
+      margin: auto !important;
+      text-align: left !important; }
+    #que-hacemos .carousel-caption h3 {
+      max-width: 350px;
+      font-size: 20px;
+      font-weight: 700;
+      font-family: "Source Sans Pro";
+      color: #000;
+      display: inline-block;
+      background-color: white;
+      padding: 2px 10px 6px 10px;
+      margin-bottom: -10px; }
+    #que-hacemos .carousel-caption h2 {
+      max-width: 350px;
+      font-size: 40px;
+      font-weight: 700;
+      font-family: "Source Sans Pro";
+      color: white;
+      line-height: 30px;
+      margin-bottom: -5px; }
+    #que-hacemos .carousel-caption button {
+      max-width: 350px;
+      font-size: 15px;
+      font-weight: 700;
+      color: white;
+      display: inline-block;
+      background-color: #ce8f2f;
+      font-family: "Source Sans Pro";
+      padding: 4px 20px 4px 20px;
+      margin-top: 20px;
+      border: none; }
+
 /****************************************/
 /*=========     PORTFOLIO     =========*/
 /**************************************/
+#portfolio {
+  padding-top: 100px; }
+  #portfolio h2 {
+    margin: auto;
+    max-width: 360px;
+    font-size: 50px;
+    font-weight: 700;
+    font-family: "Source Sans Pro";
+    color: #f5f5f5;
+    display: block;
+    background-color: #000;
+    padding: 2px 0px 8px 0px;
+    margin-bottom: 20px; }
+  #portfolio figure {
+    margin-top: 25px;
+    display: inline-block;
+    text-align: center; }
+
+/****************************************/
+/*=========    CELEBRITIES    =========*/
+/**************************************/
+#celebrities {
+  padding-top: 90px; }
+  #celebrities h2 {
+    margin: auto;
+    max-width: 360px;
+    font-size: 50px;
+    font-weight: 700;
+    font-family: "Source Sans Pro";
+    color: #f5f5f5;
+    display: block;
+    background-color: #000;
+    padding: 2px 0px 8px 0px;
+    margin-bottom: 30px; }
+  #celebrities img {
+    height: 300px;
+    width: auto;
+    max-width: 200%; }
+  #celebrities .glyphicon {
+    color: white;
+    font-size: 30px !important; }
+
 /**************************************/
 /*=========     CONTACT     =========*/
 /************************************/
+#contacto {
+  padding-top: 90px; }
+
+.container-contacto {
+  background-color: #000; }
+
+.mapa {
+  line-height: 0 !important;
+  border: none;
+  padding: 0 !important; }
+
+#contacto h2 {
+  max-width: 350px;
+  font-size: 50px;
+  font-weight: 700;
+  font-family: "Source Sans Pro";
+  color: #f5f5f5;
+  display: inline-block;
+  background-color: #000;
+  padding: 2px 10px 8px 10px;
+  margin-bottom: 40px; }
+#contacto h3 {
+  padding-left: 55px;
+  padding-top: 50px;
+  max-width: 90%;
+  margin: 0;
+  font-size: 21px;
+  font-weight: 700;
+  font-family: "Source Sans Pro";
+  color: #f5f5f5;
+  line-height: 25px;
+  margin-bottom: -5px; }
+
+.form {
+  padding-left: 55px;
+  margin-top: 30px;
+  max-width: 90%;
+  font-family: "Source Sans Pro"; }
+
+.form-control {
+  height: 42px;
+  border: none !important;
+  border-radius: 0;
+  font-size: 17px; }
+
+.btn {
+  width: 180px;
+  border-radius: 0;
+  border: none !important;
+  font-size: 25px;
+  font-weight: 700;
+  color: #f5f5f5;
+  background-color: #ce8f2f;
+  font-family: "Source Sans Pro";
+  margin-top: 5px; }
+
+.form-group {
+  margin-bottom: 9px; }
+
+.contacto-form p {
+  padding-left: 55px;
+  padding-top: 12px;
+  font-size: 16px;
+  color: #f5f5f5;
+  text-align: left; }
+
+.direccion {
+  margin: 25px 0 35px; }
+  .direccion p {
+    margin: 0; }
+  .direccion i {
+    padding-right: 10px;
+    font-size: 25px; }
+
 /************************************/
 /*=========     FOOTER     =========*/
 /************************************/
+#footer {
+  background-color: #f5f5f5;
+  height: 310px;
+  text-align: center; }
+  #footer img {
+    display: block;
+    margin: auto;
+    padding-top: 15px; }
+  #footer i {
+    width: 40px;
+    height: 40px;
+    font-size: 28px;
+    background-color: #000;
+    color: #f5f5f5;
+    border-radius: 50% !important;
+    margin: 15px 5px;
+    display: inline-block; }
+
 /******************************************/
 /*=========     MEDIA-QUERIES    =========*/
 /******************************************/
