--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -201,6 +201,11 @@ a {
     display: inline-block;
     text-align: center; }
 
+.modal-content {
+  width: 100%;
+  margin: auto;
+  border: 1px red solid; }
+
 /****************************************/
 /*=========    CELEBRITIES    =========*/
 /**************************************/
@@ -307,7 +312,7 @@ a {
 /************************************/
 #footer {
   background-color: #f5f5f5;
-  height: 310px;
+  height: 400px;
   text-align: center; }
   #footer img {
     display: block;
@@ -326,12 +331,61 @@ a {
 /******************************************/
 /*=========     MEDIA-QUERIES    =========*/
 /******************************************/
+/*====== FORMATO SMALL ======*/
 @media (min-width: 768px) {
   h2 {
-    width: 220px; } }
+    width: auto; }
+
+  #equipo h4 {
+    font-size: 22px; }
+
+  #que-hacemos img {
+    width: 100%;
+    height: auto;
+    max-width: 100%; }
+  #que-hacemos h3 {
+    font-size: 30px !important; }
+  #que-hacemos button {
+    font-size: 18px !important; }
+
+  #celebrities
+  img {
+    width: 100%;
+    height: auto;
+    max-width: 100%; } }
+#footer {
+  height: 70px; }
+
+i {
+  margin-top: 30px !important; }
+
+/*====== FORMATO MEDIUM ======*/
 @media (min-width: 992px) {
   h2 {
-    width: 293px; } }
+    width: 293px; }
+
+  #celebrities
+  img {
+    width: 100%;
+    height: auto;
+    max-width: 100%; }
+
+  #que-hacemos img {
+    width: 100%;
+    height: auto;
+    max-width: 100%; }
+  #que-hacemos h3 {
+    font-size: 40px !important; }
+  #que-hacemos button {
+    font-size: 25px !important; }
+
+  #footer {
+    height: 125px; }
+    #footer i {
+      width: 50px;
+      height: 50px;
+      font-size: 38px; } }
+/*====== FORMATO LARGE ======*/
 @media (min-width: 1200px) {
   h2 {
     width: 360px; } }
