--- a/html/scss/_layout.scss
+++ b/html/scss/_layout.scss
@@ -221,6 +221,11 @@
 
 	}
 }
+.modal-content{
+	width: 100%;
+	margin: auto;
+	border: 1px red solid;
+}
 
 /****************************************/
 /*=========    CELEBRITIES    =========*/
@@ -351,7 +356,7 @@
 
 #footer{
 	background-color: $color-3;
-	height: 310px;
+	height: 400px;
 	text-align: center;
 
 	img{
