--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -196,15 +196,43 @@ a {
     background-color: #000;
     padding: 2px 0px 8px 0px;
     margin-bottom: 20px; }
+  #portfolio .thumbnail {
+    margin: 25px 0 0 0;
+    display: inline-block;
+    text-align: center;
+    border: none;
+    padding: 0 !important;
+    position: relative;
+    width: 100%; }
+  #portfolio .thumbnail:hover {
+    transform: scale(1.1);
+    transition: 350ms; }
+  #portfolio .thumbnail i {
+    position: absolute;
+    left: 46.5%;
+    top: 40%;
+    color: #FFF;
+    font-size: 60px;
+    margin: -13px;
+    opacity: 0;
+    transition: 350ms; }
+  #portfolio .thumbnail:hover i {
+    opacity: 1;
+    transition: 350ms;
+    transform: scale(2); }
+  #portfolio .modal-content {
+    border: none; }
+    #portfolio .modal-content button {
+      color: #000;
+      opacity: 10; }
+    #portfolio .modal-content h4 {
+      font-family: "Permanent Marker";
+      font-size: 20px;
+      color: #000; }
   #portfolio figure {
     margin-top: 25px;
     display: inline-block;
     text-align: center; }
-
-.modal-content {
-  width: 100%;
-  margin: auto;
-  border: 1px red solid; }
 
 /****************************************/
 /*=========    CELEBRITIES    =========*/
@@ -235,36 +263,42 @@ a {
 /************************************/
 #contacto {
   padding-top: 90px; }
+  #contacto .container-contacto {
+    background-color: #000; }
+  #contacto .mapa {
+    padding: 0 !important; }
+  #contacto h2 {
+    max-width: 350px;
+    font-size: 50px;
+    font-weight: 700;
+    font-family: "Source Sans Pro";
+    color: #f5f5f5;
+    display: inline-block;
+    background-color: #000;
+    padding: 2px 10px 8px 10px;
+    margin-bottom: 40px; }
+  #contacto h3 {
+    padding-left: 55px;
+    padding-top: 50px;
+    max-width: 90%;
+    margin: 0;
+    font-size: 18px;
+    font-weight: 700;
+    font-family: "Source Sans Pro";
+    color: #f5f5f5;
+    line-height: 25px;
+    margin-bottom: -5px; }
 
-.container-contacto {
-  background-color: #000; }
-
-.mapa {
-  line-height: 0 !important;
-  border: none;
-  padding: 0 !important; }
-
-#contacto h2 {
-  max-width: 350px;
-  font-size: 50px;
-  font-weight: 700;
-  font-family: "Source Sans Pro";
-  color: #f5f5f5;
-  display: inline-block;
-  background-color: #000;
-  padding: 2px 10px 8px 10px;
-  margin-bottom: 40px; }
-#contacto h3 {
-  padding-left: 55px;
-  padding-top: 50px;
-  max-width: 90%;
-  margin: 0;
-  font-size: 21px;
-  font-weight: 700;
-  font-family: "Source Sans Pro";
-  color: #f5f5f5;
-  line-height: 25px;
-  margin-bottom: -5px; }
+.map-box {
+  height: 300px;
+  line-height: 0; }
+  .map-box iframe {
+    display: block;
+    width: 100%;
+    height: 100%;
+    border: none;
+    overflow: hidden;
+    /* no genera scroll interno en el iframe */ }
 
 .form {
   padding-left: 55px;
@@ -312,7 +346,6 @@ a {
 /************************************/
 #footer {
   background-color: #f5f5f5;
-  height: 230px;
   text-align: center; }
   #footer img {
     display: block;
@@ -325,7 +358,7 @@ a {
     background-color: #000;
     color: #f5f5f5;
     border-radius: 50% !important;
-    margin: 15px 5px;
+    margin: 30px 5px;
     display: inline-block; }
 
 /******************************************/
@@ -344,21 +377,25 @@ a {
     height: auto;
     max-width: 100%; }
   #que-hacemos h3 {
-    font-size: 30px !important; }
+    font-size: 30px !important;
+    margin: -5px 0 0 0 !important; }
+  #que-hacemos h2 {
+    font-size: 60px !important;
+    line-height: 50px !important; }
   #que-hacemos button {
     font-size: 18px !important; }
 
-  #celebrities
-  img {
+  #celebrities img {
     width: 100%;
     height: auto;
-    max-width: 100%; } }
-#footer {
-  height: 70px; }
+    max-width: 100%; }
 
-i {
-  margin-top: 30px !important; }
+  .map-box {
+    height: 698px; }
 
+  #footer i {
+    margin-top: 30px;
+    display: inline-block; } }
 /*====== FORMATO MEDIUM ======*/
 @media (min-width: 992px) {
   h2 {
@@ -375,16 +412,18 @@ i {
     height: auto;
     max-width: 100%; }
   #que-hacemos h3 {
-    font-size: 40px !important; }
+    font-size: 40px !important;
+    margin: 5px 0 0 0 !important; }
+  #que-hacemos h2 {
+    font-size: 60px !important;
+    line-height: 50px !important; }
   #que-hacemos button {
-    font-size: 25px !important; }
+    font-size: 20px !important; }
 
-  #footer {
-    height: 125px; }
-    #footer i {
-      width: 50px;
-      height: 50px;
-      font-size: 38px; } }
+  #footer i {
+    width: 50px;
+    height: 50px;
+    font-size: 38px; } }
 /*====== FORMATO LARGE ======*/
 @media (min-width: 1200px) {
   h2 {
