--- a/html/scss/_layout.scss
+++ b/html/scss/_layout.scss
@@ -214,18 +214,58 @@
 		padding: 2px 0px 8px 0px;
 		margin-bottom: 20px;
 	}
+	.thumbnail{
+		margin: 25px 0 0 0 ;
+		display: inline-block;
+		text-align: center;
+		border: none;
+		padding: 0 !important;
+		position: relative;
+		width: 100%;
+	}
+	.thumbnail:hover{
+		transform: scale(1.1);
+		transition: 350ms;
+	}
+	.thumbnail i{
+		position: absolute;
+		left: 46.5%;
+		top: 40%;
+		color: #FFF;
+		font-size: 60px;
+		margin: -13px;
+		opacity: 0;
+		transition: 350ms;
+	}
+
+	.thumbnail:hover i {
+		opacity: 1;
+		transition: 350ms;
+		transform: scale(2);
+	}
+
+	.modal-content{
+		border: none;
+		
+		button{
+			color: $color-1;
+			opacity: 10;
+		}
+		h4{
+			font-family: $fuente-2;
+			font-size: 20px;
+			color: $color-1;
+		}
+	}
+
+
 	figure{
 		margin-top: 25px;
 		display: inline-block;
 		text-align: center;
-
 	}
 }
-.modal-content{
-	width: 100%;
-	margin: auto;
-	border: 1px red solid;
-}
+
 
 /****************************************/
 /*=========    CELEBRITIES    =========*/
@@ -264,22 +304,18 @@
 /**************************************/
 /*=========     CONTACT     =========*/
 /************************************/
-#contacto {
-  padding-top: 90px;
-}
-
-.container-contacto {
-
-	background-color: $color-1;
-	}
-
-.mapa{
-	line-height: 0 !important;
-	border: none;
-	padding: 0 !important;
-}
 
 #contacto{
+	padding-top: 90px;
+
+	.container-contacto {
+		background-color: $color-1;
+		}
+
+	.mapa{
+		padding: 0 !important;
+
+	}
 
 	h2 {
 		max-width: 350px;
@@ -297,7 +333,7 @@
 		padding-top: 50px;
 		max-width: 90%;
 		margin: 0;
-		font-size: 21px;
+		font-size: 18px;
 		font-weight: 700;
 		font-family: $fuente-1;
 		color: $color-3;
@@ -306,6 +342,19 @@
 	}
 
 }
+
+.map-box{
+	height: 300px;
+	line-height: 0;
+	iframe{
+		display: block;
+		width: 100%;
+		height: 100%;
+		border: none;
+		overflow: hidden; /* no genera scroll interno en el iframe */
+	}
+}
+
 .form{
 	padding-left: 55px;
 	margin-top: 30px;
@@ -356,7 +405,6 @@
 
 #footer{
 	background-color: $color-3;
-	height: 230px;
 	text-align: center;
 
 	img{
@@ -364,6 +412,7 @@
 		margin: auto;
 		padding-top: 15px;
 	}
+
 	i{
 		width: 40px;
 		height: 40px;
@@ -371,8 +420,7 @@
 		background-color: $color-1;
 		color: $color-3;
 		border-radius: 50% !important;
-		margin: 15px 5px;
+		margin: 30px 5px;
 		display: inline-block;
-
 	}
 }
