--- a/html/scss/_media-queries.scss
+++ b/html/scss/_media-queries.scss
@@ -18,33 +18,46 @@
 
 	#que-hacemos{
 		img{
-    	width:100%;
-    	height: auto;
-		max-width: 100%;
+	    	width:100%;
+	    	height: auto;
+			max-width: 100%;
 		}
 		h3{
-		font-size: 30px !important;
+			font-size: 30px !important;
+			margin: -5px 0 0 0!important;
+		}
+		h2{
+			font-size: 60px !important;
+			line-height:50px !important;
 		}
 		button{
 			font-size: 18px !important;
 		}
 	}
 
-	#celebrities
-	img{
-    	width:100%;
-    	height: auto;
-		max-width: 100%;
+	#celebrities{
+		img{
+	    	width:100%;
+	    	height: auto;
+			max-width: 100%;
 		}
 	}
 
-	#footer{
-		height: 70px;
-	}
-	i{
-		margin-top: 30px !important;
+	.map-box{
+		height: 698px
 	}
 
+	
+
+	#footer{
+
+		i{
+			margin-top: 30px;
+			display: inline-block
+		}
+	}
+
+}
 
 /*====== FORMATO MEDIUM ======*/
 
@@ -55,27 +68,31 @@
 
 	#celebrities
 	img{
-    	width:100%;
-    	height: auto;
-		max-width: 100%;
+	    	width:100%;
+	    	height: auto;
+			max-width: 100%;
 		}
 
 	#que-hacemos {
 		img{
-    	width:100%;
-    	height: auto;
-		max-width: 100%;
+	    	width:100%;
+	    	height: auto;
+			max-width: 100%;
 		}
 		h3{
-		font-size: 40px !important;
+			font-size: 40px !important;
+			margin: 5px 0 0 0!important;
+		}
+		h2{
+			font-size: 60px !important;
+			line-height:50px !important;
 		}
 		button{
-			font-size: 25px !important;
+			font-size: 20px !important;
 		}
 	}
 
 	#footer{
-		height: 125px;
 		i{
 			width: 50px;
 			height: 50px;
